@@ -1,3 +1,8 @@
+2000-04-20  Alexandre Oliva  <aoliva@cygnus.com>
+
+	* m10300-dis.c (HAVE_AM30, HAVE_AM33): Define.
+	(disassemble): Use them.
+
 2000-04-04  Alan Modra  <alan@linuxcare.com.au>
 
 	* po/opcodes.pot: Regenerate.
